# cardio-disease

./: README.md
cardio-prediction/: README.md  pyproject.toml  requirements.txt
cardio-prediction/conf/base/: catalog.yml  parameters_data_processing.yml  parameters_data_science.yml
cardio-prediction/src/cardio_prediction/: __init__.py  __main__.py  settings.py
cardio-prediction/src/cardio_prediction/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
cardio-prediction/src/cardio_prediction/pipelines/data_science/: __init__.py  nodes.py  pipeline.py
cardio-prediction/tests/pipelines/data_processing/: test_pipeline.py
cardio-prediction/tests/pipelines/data_science/: test_pipeline.py
